Bug 1019543 - Fix toLowerCase/toUpperCase to return the original string if possible. r=luke